build/parser.output
Terminals which are not used

   NULLISH_COALESCING
   MUL_ASSIGN
   POWER_ASSIGN
   SPREAD
   DEBUGGER
   EXPORT
   IMPORT
   WITH
   YIELD
   ENUM
   AWAIT


Rules never reduced

   70 identifier_list: IDENTIFIER


State 4 conflicts: 1 shift/reduce
State 94 conflicts: 2 reduce/reduce
State 277 conflicts: 1 shift/reduce


Grammar

    0 $accept: Script $end

    1 Script: statement_list_opt

    2 statement_list_opt: /* empty */
    3                   | statement_list

    4 statement_list: statement
    5               | statement_list statement

    6 statement: block_statement
    7          | variable_statement
    8          | if_statement
    9          | return_statement
   10          | expression_statement
   11          | function_declaration
   12          | iteration_statement
   13          | break_statement
   14          | continue_statement
   15          | switch_statement
   16          | try_statement
   17          | throw_statement
   18          | class_declaration
   19          | empty_statement

   20 empty_statement: StatementTerminator

   21 block_statement: LBRACE statement_list_opt RBRACE

   22 StatementTerminator: SEMICOLON
   23                    | TOK_VIRTUAL_SEMICOLON

   24 variable_statement: variable_declaration_list StatementTerminator

   25 variable_declaration_list: LET variable_declaration_list_inner
   26                          | CONST variable_declaration_list_inner
   27                          | VAR variable_declaration_list_inner

   28 variable_declaration_list_inner: variable_declaration
   29                                | variable_declaration_list_inner COMMA variable_declaration

   30 variable_declaration: IDENTIFIER
   31                     | IDENTIFIER ASSIGN assignment_expression

   32 if_statement: IF LPAREN expression RPAREN statement
   33             | IF LPAREN expression RPAREN statement ELSE statement

   34 expression_statement: expression StatementTerminator

   35 expression_opt: /* empty */
   36               | expression

   37 @1: /* empty */

   38 return_statement: RETURN @1 expression_opt StatementTerminator

   39 function_declaration: FUNCTION IDENTIFIER arguments block_statement

   40 iteration_statement: while_statement
   41                    | for_statement
   42                    | do_while_statement

   43 while_statement: WHILE LPAREN expression RPAREN statement

   44 for_statement: FOR LPAREN for_init SEMICOLON expression_opt SEMICOLON expression_opt RPAREN statement

   45 for_init: /* empty */
   46         | variable_declaration_list
   47         | expression

   48 do_while_statement: DO statement WHILE LPAREN expression RPAREN StatementTerminator

   49 break_statement: BREAK StatementTerminator

   50 continue_statement: CONTINUE StatementTerminator

   51 switch_statement: SWITCH LPAREN expression RPAREN LBRACE switch_case_list RBRACE

   52 try_statement: TRY block_statement catch_clause
   53              | TRY block_statement finally_clause
   54              | TRY block_statement catch_clause finally_clause

   55 catch_clause: CATCH LPAREN IDENTIFIER RPAREN block_statement

   56 finally_clause: FINALLY block_statement

   57 @2: /* empty */

   58 throw_statement: THROW @2 expression StatementTerminator

   59 switch_case_list: /* empty */
   60                 | switch_case_list switch_case

   61 switch_case: CASE expression COLON case_statement_list
   62            | DEFAULT COLON case_statement_list

   63 case_statement_list: /* empty */
   64                    | case_statement_list statement

   65 literal_or_identifier: IDENTIFIER
   66                      | NUMERIC_LITERAL
   67                      | STRING_LITERAL

   68 arrow_parameter_list: /* empty */
   69                     | identifier_list

   70 identifier_list: IDENTIFIER
   71                | identifier_list COMMA IDENTIFIER

   72 function_expression: FUNCTION arguments block_statement

   73 class_declaration: CLASS IDENTIFIER class_body
   74                  | CLASS IDENTIFIER EXTENDS assignment_expression class_body

   75 class_body: LBRACE method_definition_list RBRACE

   76 method_definition_list: /* empty */
   77                       | method_definition_list method_definition

   78 method_definition: property_name arguments block_statement
   79                  | STATIC property_name arguments block_statement

   80 expression: assignment_expression
   81           | expression COMMA assignment_expression

   82 assignment_expression: conditional_expression
   83                      | arrow_function_expression
   84                      | left_hand_side_expression ASSIGN assignment_expression
   85                      | left_hand_side_expression ADD_ASSIGN assignment_expression
   86                      | left_hand_side_expression SUB_ASSIGN assignment_expression

   87 conditional_expression: logical_or_expression
   88                       | logical_or_expression CONDITIONAL assignment_expression COLON assignment_expression

   89 logical_or_expression: logical_and_expression
   90                      | logical_or_expression LOGICAL_OR logical_and_expression

   91 logical_and_expression: bitwise_or_expression
   92                       | logical_and_expression LOGICAL_AND bitwise_or_expression

   93 bitwise_or_expression: bitwise_xor_expression
   94                      | bitwise_or_expression BIT_OR bitwise_xor_expression

   95 bitwise_xor_expression: bitwise_and_expression
   96                       | bitwise_xor_expression BIT_XOR bitwise_and_expression

   97 bitwise_and_expression: equality_expression
   98                       | bitwise_and_expression BIT_AND equality_expression

   99 equality_expression: relational_expression
  100                    | equality_expression EQ relational_expression
  101                    | equality_expression NE relational_expression
  102                    | equality_expression STRICT_EQ relational_expression
  103                    | equality_expression STRICT_NE relational_expression

  104 relational_expression: shift_expression
  105                      | relational_expression LT shift_expression
  106                      | relational_expression GT shift_expression
  107                      | relational_expression LE shift_expression
  108                      | relational_expression GE shift_expression
  109                      | relational_expression IN shift_expression
  110                      | relational_expression INSTANCEOF shift_expression

  111 shift_expression: additive_expression
  112                 | shift_expression LSHIFT additive_expression
  113                 | shift_expression RSHIFT additive_expression
  114                 | shift_expression URSHIFT additive_expression

  115 additive_expression: multiplicative_expression
  116                    | additive_expression PLUS multiplicative_expression
  117                    | additive_expression MINUS multiplicative_expression

  118 multiplicative_expression: unary_expression
  119                          | multiplicative_expression MUL unary_expression
  120                          | multiplicative_expression MOD unary_expression
  121                          | multiplicative_expression POWER unary_expression

  122 unary_expression: update_expression
  123                 | DELETE unary_expression
  124                 | VOID unary_expression
  125                 | TYPEOF unary_expression
  126                 | INC unary_expression
  127                 | DEC unary_expression
  128                 | PLUS unary_expression
  129                 | MINUS unary_expression
  130                 | BIT_NOT unary_expression
  131                 | NOT unary_expression

  132 update_expression: left_hand_side_expression
  133                  | left_hand_side_expression INC
  134                  | left_hand_side_expression DEC

  135 left_hand_side_expression: new_expression
  136                          | call_expression

  137 new_expression: member_expression
  138               | NEW new_expression

  139 call_expression: member_expression arguments
  140                | NEW new_expression arguments

  141 member_expression: primary_expression
  142                  | member_expression LBRACK expression RBRACK
  143                  | member_expression DOT IDENTIFIER

  144 arguments: LPAREN RPAREN
  145          | LPAREN argument_list RPAREN

  146 argument_list: assignment_expression
  147              | argument_list COMMA assignment_expression

  148 primary_expression: THIS
  149                   | literal_or_identifier
  150                   | TRUE_LITERAL
  151                   | FALSE_LITERAL
  152                   | NULL_LITERAL
  153                   | LPAREN expression RPAREN
  154                   | object_expression
  155                   | array_expression
  156                   | function_expression
  157                   | SUPER

  158 object_expression: LBRACE RBRACE
  159                  | LBRACE property_list RBRACE

  160 property_list: property
  161              | property_list COMMA property

  162 property: property_name COLON assignment_expression

  163 property_name: literal_or_identifier

  164 array_expression: LBRACK RBRACK
  165                 | LBRACK element_list RBRACK

  166 element_list: assignment_expression
  167             | element_list COMMA assignment_expression

  168 arrow_function_expression: LPAREN arrow_parameter_list RPAREN ARROW arrow_body
  169                          | IDENTIFIER ARROW arrow_body

  170 arrow_body: block_statement
  171           | logical_or_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 30 31 39 55 65 70 71 73 74 143 169
STRING_LITERAL (259) 67
NUMERIC_LITERAL (260) 66
LBRACE (261) 21 51 75 158 159
RBRACE (262) 21 51 75 158 159
LPAREN (263) 32 33 43 44 48 51 55 144 145 153 168
RPAREN (264) 32 33 43 44 48 51 55 144 145 153 168
LBRACK (265) 142 164 165
RBRACK (266) 142 164 165
DOT (267) 143
SEMICOLON (268) 22 44
COMMA (269) 29 71 81 147 161 167
LT (270) 105
GT (271) 106
LE (272) 107
GE (273) 108
EQ (274) 100
NE (275) 101
STRICT_EQ (276) 102
STRICT_NE (277) 103
PLUS (278) 116 128
MINUS (279) 117 129
MUL (280) 119
MOD (281) 120
POWER (282) 121
INC (283) 126 133
DEC (284) 127 134
LSHIFT (285) 112
RSHIFT (286) 113
URSHIFT (287) 114
BIT_AND (288) 98
BIT_OR (289) 94
BIT_XOR (290) 96
NOT (291) 131
BIT_NOT (292) 130
LOGICAL_AND (293) 92
LOGICAL_OR (294) 90
NULLISH_COALESCING (295)
CONDITIONAL (296) 88
COLON (297) 61 62 88 162
ASSIGN (298) 31 84
ADD_ASSIGN (299) 85
SUB_ASSIGN (300) 86
MUL_ASSIGN (301)
POWER_ASSIGN (302)
ARROW (303) 168 169
SPREAD (304)
BREAK (305) 49
CASE (306) 61
CATCH (307) 55
CLASS (308) 73 74
CONST (309) 26
CONTINUE (310) 50
DEBUGGER (311)
DEFAULT (312) 62
DELETE (313) 123
DO (314) 48
ELSE (315) 33
EXPORT (316)
EXTENDS (317) 74
FINALLY (318) 56
FOR (319) 44
FUNCTION (320) 39 72
IF (321) 32 33
IMPORT (322)
IN (323) 109
INSTANCEOF (324) 110
NEW (325) 138 140
RETURN (326) 38
SUPER (327) 157
SWITCH (328) 51
THIS (329) 148
THROW (330) 58
TRY (331) 52 53 54
TYPEOF (332) 125
VAR (333) 27
VOID (334) 124
WHILE (335) 43 48
WITH (336)
YIELD (337)
LET (338) 25
STATIC (339) 79
ENUM (340)
AWAIT (341)
TRUE_LITERAL (342) 150
FALSE_LITERAL (343) 151
NULL_LITERAL (344) 152
TOK_VIRTUAL_SEMICOLON (345) 23
UPOSTFIX (346)


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
Script (93)
    on left: 1, on right: 0
statement_list_opt (94)
    on left: 2 3, on right: 1 21
statement_list (95)
    on left: 4 5, on right: 3 5
statement (96)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19,
    on right: 4 5 32 33 43 44 48 64
empty_statement (97)
    on left: 20, on right: 19
block_statement (98)
    on left: 21, on right: 6 39 52 53 54 55 56 72 78 79 170
StatementTerminator (99)
    on left: 22 23, on right: 20 24 34 38 48 49 50 58
variable_statement (100)
    on left: 24, on right: 7
variable_declaration_list (101)
    on left: 25 26 27, on right: 24 46
variable_declaration_list_inner (102)
    on left: 28 29, on right: 25 26 27 29
variable_declaration (103)
    on left: 30 31, on right: 28 29
if_statement (104)
    on left: 32 33, on right: 8
expression_statement (105)
    on left: 34, on right: 10
expression_opt (106)
    on left: 35 36, on right: 38 44
return_statement (107)
    on left: 38, on right: 9
@1 (108)
    on left: 37, on right: 38
function_declaration (109)
    on left: 39, on right: 11
iteration_statement (110)
    on left: 40 41 42, on right: 12
while_statement (111)
    on left: 43, on right: 40
for_statement (112)
    on left: 44, on right: 41
for_init (113)
    on left: 45 46 47, on right: 44
do_while_statement (114)
    on left: 48, on right: 42
break_statement (115)
    on left: 49, on right: 13
continue_statement (116)
    on left: 50, on right: 14
switch_statement (117)
    on left: 51, on right: 15
try_statement (118)
    on left: 52 53 54, on right: 16
catch_clause (119)
    on left: 55, on right: 52 54
finally_clause (120)
    on left: 56, on right: 53 54
throw_statement (121)
    on left: 58, on right: 17
@2 (122)
    on left: 57, on right: 58
switch_case_list (123)
    on left: 59 60, on right: 51 60
switch_case (124)
    on left: 61 62, on right: 60
case_statement_list (125)
    on left: 63 64, on right: 61 62 64
literal_or_identifier (126)
    on left: 65 66 67, on right: 149 163
arrow_parameter_list (127)
    on left: 68 69, on right: 168
identifier_list (128)
    on left: 70 71, on right: 69 71
function_expression (129)
    on left: 72, on right: 156
class_declaration (130)
    on left: 73 74, on right: 18
class_body (131)
    on left: 75, on right: 73 74
method_definition_list (132)
    on left: 76 77, on right: 75 77
method_definition (133)
    on left: 78 79, on right: 77
expression (134)
    on left: 80 81, on right: 32 33 34 36 43 47 48 51 58 61 81 142
    153
assignment_expression (135)
    on left: 82 83 84 85 86, on right: 31 74 80 81 84 85 86 88 146
    147 162 166 167
conditional_expression (136)
    on left: 87 88, on right: 82
logical_or_expression (137)
    on left: 89 90, on right: 87 88 90 171
logical_and_expression (138)
    on left: 91 92, on right: 89 90 92
bitwise_or_expression (139)
    on left: 93 94, on right: 91 92 94
bitwise_xor_expression (140)
    on left: 95 96, on right: 93 94 96
bitwise_and_expression (141)
    on left: 97 98, on right: 95 96 98
equality_expression (142)
    on left: 99 100 101 102 103, on right: 97 98 100 101 102 103
relational_expression (143)
    on left: 104 105 106 107 108 109 110, on right: 99 100 101 102
    103 105 106 107 108 109 110
shift_expression (144)
    on left: 111 112 113 114, on right: 104 105 106 107 108 109 110
    112 113 114
additive_expression (145)
    on left: 115 116 117, on right: 111 112 113 114 116 117
multiplicative_expression (146)
    on left: 118 119 120 121, on right: 115 116 117 119 120 121
unary_expression (147)
    on left: 122 123 124 125 126 127 128 129 130 131,
    on right: 118 119 120 121 123 124 125 126 127 128 129 130 131
update_expression (148)
    on left: 132 133 134, on right: 122
left_hand_side_expression (149)
    on left: 135 136, on right: 84 85 86 132 133 134
new_expression (150)
    on left: 137 138, on right: 135 138 140
call_expression (151)
    on left: 139 140, on right: 136
member_expression (152)
    on left: 141 142 143, on right: 137 139 142 143
arguments (153)
    on left: 144 145, on right: 39 72 78 79 139 140
argument_list (154)
    on left: 146 147, on right: 145 147
primary_expression (155)
    on left: 148 149 150 151 152 153 154 155 156 157,
    on right: 141
object_expression (156)
    on left: 158 159, on right: 154
property_list (157)
    on left: 160 161, on right: 159 161
property (158)
    on left: 162, on right: 160 161
property_name (159)
    on left: 163, on right: 78 79 162
array_expression (160)
    on left: 164 165, on right: 155
element_list (161)
    on left: 166 167, on right: 165 167
arrow_function_expression (162)
    on left: 168 169, on right: 83
arrow_body (163)
    on left: 170 171, on right: 168 169


state 0

    0 $accept: . Script $end

    IDENTIFIER             shift, and go to state 1
    STRING_LITERAL         shift, and go to state 2
    NUMERIC_LITERAL        shift, and go to state 3
    LBRACE                 shift, and go to state 4
    LPAREN                 shift, and go to state 5
    LBRACK                 shift, and go to state 6
    SEMICOLON              shift, and go to state 7
    PLUS                   shift, and go to state 8
    MINUS                  shift, and go to state 9
    INC                    shift, and go to state 10
    DEC                    shift, and go to state 11
    NOT                    shift, and go to state 12
    BIT_NOT                shift, and go to state 13
    BREAK                  shift, and go to state 14
    CLASS                  shift, and go to state 15
    CONST                  shift, and go to state 16
    CONTINUE               shift, and go to state 17
    DELETE                 shift, and go to state 18
    DO                     shift, and go to state 19
    FOR                    shift, and go to state 20
    FUNCTION               shift, and go to state 21
    IF                     shift, and go to state 22
    NEW                    shift, and go to state 23
    RETURN                 shift, and go to state 24
    SUPER                  shift, and go to state 25
    SWITCH                 shift, and go to state 26
    THIS                   shift, and go to state 27
    THROW                  shift, and go to state 28
    TRY                    shift, and go to state 29
    TYPEOF                 shift, and go to state 30
    VAR                    shift, and go to state 31
    VOID                   shift, and go to state 32
    WHILE                  shift, and go to state 33
    LET                    shift, and go to state 34
    TRUE_LITERAL           shift, and go to state 35
    FALSE_LITERAL          shift, and go to state 36
    NULL_LITERAL           shift, and go to state 37
    TOK_VIRTUAL_SEMICOLON  shift, and go to state 38

    $default  reduce using rule 2 (statement_list_opt)

    Script                     go to state 39
    statement_list_opt         go to state 40
    statement_list             go to state 41
    statement                  go to state 42
    empty_statement            go to state 43
    block_statement            go to state 44
    StatementTerminator        go to state 45
    variable_statement         go to state 46
    variable_declaration_list  go to state 47
    if_statement               go to state 48
    expression_statement       go to state 49
    return_statement           go to state 50
    function_declaration       go to state 51
    iteration_statement        go to state 52
    while_statement            go to state 53
    for_statement              go to state 54
    do_while_statement         go to state 55
    break_statement            go to state 56
    continue_statement         go to state 57
    switch_statement           go to state 58
    try_statement              go to state 59
    throw_statement            go to state 60
    literal_or_identifier      go to state 61
    function_expression        go to state 62
    class_declaration          go to state 63
    expression                 go to state 64
    assignment_expression      go to state 65
    conditional_expression     go to state 66
    logical_or_expression      go to state 67
    logical_and_expression     go to state 68
    bitwise_or_expression      go to state 69
    bitwise_xor_expression     go to state 70
    bitwise_and_expression     go to state 71
    equality_expression        go to state 72
    relational_expression      go to state 73
    shift_expression           go to state 74
    additive_expression        go to state 75
    multiplicative_expression  go to state 76
    unary_expression           go to state 77
    update_expression          go to state 78
    left_hand_side_expression  go to state 79
    new_expression             go to state 80
    call_expression            go to state 81
    member_expression          go to state 82
    primary_expression         go to state 83
    object_expression          go to state 84
    array_expression           go to state 85
    arrow_function_expression  go to state 86


state 1

   65 literal_or_identifier: IDENTIFIER .
  169 arrow_function_expression: IDENTIFIER . ARROW arrow_body

    ARROW  shift, and go to state 87

    $default  reduce using rule 65 (literal_or_identifier)


state 2

   67 literal_or_identifier: STRING_LITERAL .

    $default  reduce using rule 67 (literal_or_identifier)


state 3

   66 literal_or_identifier: NUMERIC_LITERAL .

    $default  reduce using rule 66 (literal_or_identifier)


state 4

   21 block_statement: LBRACE . statement_list_opt RBRACE
  158 object_expression: LBRACE . RBRACE
  159                  | LBRACE . property_list RBRACE

    IDENTIFIER             shift, and go to state 1
    STRING_LITERAL         shift, and go to state 2
    NUMERIC_LITERAL        shift, and go to state 3
    LBRACE                 shift, and go to state 4
    RBRACE                 shift, and go to state 88
    LPAREN                 shift, and go to state 5
    LBRACK                 shift, and go to state 6
    SEMICOLON              shift, and go to state 7
    PLUS                   shift, and go to state 8
    MINUS                  shift, and go to state 9
    INC                    shift, and go to state 10
    DEC                    shift, and go to state 11
    NOT                    shift, and go to state 12
    BIT_NOT                shift, and go to state 13
    BREAK                  shift, and go to state 14
    CLASS                  shift, and go to state 15
    CONST                  shift, and go to state 16
    CONTINUE               shift, and go to state 17
    DELETE                 shift, and go to state 18
    DO                     shift, and go to state 19
    FOR                    shift, and go to state 20
    FUNCTION               shift, and go to state 21
    IF                     shift, and go to state 22
    NEW                    shift, and go to state 23
    RETURN                 shift, and go to state 24
    SUPER                  shift, and go to state 25
    SWITCH                 shift, and go to state 26
    THIS                   shift, and go to state 27
    THROW                  shift, and go to state 28
    TRY                    shift, and go to state 29
    TYPEOF                 shift, and go to state 30
    VAR                    shift, and go to state 31
    VOID                   shift, and go to state 32
    WHILE                  shift, and go to state 33
    LET                    shift, and go to state 34
    TRUE_LITERAL           shift, and go to state 35
    FALSE_LITERAL          shift, and go to state 36
    NULL_LITERAL           shift, and go to state 37
    TOK_VIRTUAL_SEMICOLON  shift, and go to state 38

    RBRACE  [reduce using rule 2 (statement_list_opt)]

    statement_list_opt         go to state 89
    statement_list             go to state 41
    statement                  go to state 42
    empty_statement            go to state 43
    block_statement            go to state 44
    StatementTerminator        go to state 45
    variable_statement         go to state 46
    variable_declaration_list  go to state 47
    if_statement               go to state 48
    expression_statement       go to state 49
    return_statement           go to state 50
    function_declaration       go to state 51
    iteration_statement        go to state 52
    while_statement            go to state 53
    for_statement              go to state 54
    do_while_statement         go to state 55
    break_statement            go to state 56
    continue_statement         go to state 57
    switch_statement           go to state 58
    try_statement              go to state 59
    throw_statement            go to state 60
    literal_or_identifier      go to state 90
    function_expression        go to state 62
    class_declaration          go to state 63
    expression                 go to state 64
    assignment_expression      go to state 65
    conditional_expression     go to state 66
    logical_or_expression      go to state 67
    logical_and_expression     go to state 68
    bitwise_or_expression      go to state 69
    bitwise_xor_expression     go to state 70
    bitwise_and_expression     go to state 71
    equality_expression        go to state 72
    relational_expression      go to state 73
    shift_expression           go to state 74
    additive_expression        go to state 75
    multiplicative_expression  go to state 76
    unary_expression           go to state 77
    update_expression          go to state 78
    left_hand_side_expression  go to state 79
    new_expression             go to state 80
    call_expression            go to state 81
    member_expression          go to state 82
    primary_expression         go to state 83
    object_expression          go to state 84
    property_list              go to state 91
    property                   go to state 92
    property_name              go to state 93
    array_expression           go to state 85
    arrow_function_expression  go to state 86


state 5

  153 primary_expression: LPAREN . expression RPAREN
  168 arrow_function_expression: LPAREN . arrow_parameter_list RPAREN ARROW arrow_body

    IDENTIFIER       shift, and go to state 94
    STRING_LITERAL   shift, and go to state 2
    NUMERIC_LITERAL  shift, and go to state 3
    LBRACE           shift, and go to state 95
    LPAREN           shift, and go to state 5
    LBRACK           shift, and go to state 6
    PLUS             shift, and go to state 8
    MINUS            shift, and go to state 9
    INC              shift, and go to state 10
    DEC              shift, and go to state 11
    NOT              shift, and go to state 12
    BIT_NOT          shift, and go to state 13
    DELETE           shift, and go to state 18
    FUNCTION         shift, and go to state 96
    NEW              shift, and go to state 23
    SUPER            shift, and go to state 25
    THIS             shift, and go to state 27
    TYPEOF           shift, and go to state 30
    VOID             shift, and go to state 32
    TRUE_LITERAL     shift, and go to state 35
    FALSE_LITERAL    shift, and go to state 36
    NULL_LITERAL     shift, and go to state 37

    $default  reduce using rule 68 (arrow_parameter_list)

    literal_or_identifier      go to state 61
    arrow_parameter_list       go to state 97
    identifier_list            go to state 98
    function_expression        go to state 62
    expression                 go to state 99
    assignment_expression      go to state 65
    conditional_expression     go to state 66
    logical_or_expression      go to state 67
    logical_and_expression     go to state 68
    bitwise_or_expression      go to state 69
    bitwise_xor_expression     go to state 70
    bitwise_and_expression     go to state 71
    equality_expression        go to state 72
    relational_expression      go to state 73
    shift_expression           go to state 74
    additive_expression        go to state 75
    multiplicative_expression  go to state 76
    unary_expression           go to state 77
    update_expression          go to state 78
    left_hand_side_expression  go to state 79
    new_expression             go to state 80
    call_expression            go to state 81
    member_expression          go to state 82
    primary_expression         go to state 83
    object_expression          go to state 84
    array_expression           go to state 85
    arrow_function_expression  go to state 86


state 6

  164 array_expression: LBRACK . RBRACK
  165                 | LBRACK . element_list RBRACK

    IDENTIFIER       shift, and go to state 1
    STRING_LITERAL   shift, and go to state 2
    NUMERIC_LITERAL  shift, and go to state 3
    LBRACE           shift, and go to state 95
    LPAREN           shift, and go to state 5
    LBRACK           shift, and go to state 6
    RBRACK           shift, and go to state 100
    PLUS             shift, and go to state 8
    MINUS            shift, and go to state 9
    INC              shift, and go to state 10
    DEC              shift, and go to state 11
    NOT              shift, and go to state 12
    BIT_NOT          shift, and go to state 13
    DELETE           shift, and go to state 18
    FUNCTION         shift, and go to state 96
    NEW              shift, and go to state 23
    SUPER            shift, and go to state 25
    THIS             shift, and go to state 27
    TYPEOF           shift, and go to state 30
    VOID             shift, and go to state 32
    TRUE_LITERAL     shift, and go to state 35
    FALSE_LITERAL    shift, and go to state 36
    NULL_LITERAL     shift, and go to state 37

    literal_or_identifier      go to state 61
    function_expression        go to state 62
    assignment_expression      go to state 101
    conditional_expression     go to state 66
    logical_or_expression      go to state 67
    logical_and_expression     go to state 68
    bitwise_or_expression      go to state 69
    bitwise_xor_expression     go to state 70
    bitwise_and_expression     go to state 71
    equality_expression        go to state 72
    relational_expression      go to state 73
    shift_expression           go to state 74
    additive_expression        go to state 75
    multiplicative_expression  go to state 76
    unary_expression           go to state 77
    update_expression          go to state 78
    left_hand_side_expression  go to state 79
    new_expression             go to state 80
    call_expression            go to state 81
    member_expression          go to state 82
    primary_expression         go to state 83
    object_expression          go to state 84
    array_expression           go to state 85
    element_list               go to state 102
    arrow_function_expression  go to state 86


state 7

   22 StatementTerminator: SEMICOLON .

    $default  reduce using rule 22 (StatementTerminator)


state 8

  128 unary_expression: PLUS . unary_expression

    IDENTIFIER       shift, and go to state 103
    STRING_LITERAL   shift, and go to state 2
    NUMERIC_LITERAL  shift, and go to state 3
    LBRACE           shift, and go to state 95
    LPAREN           shift, and go to state 104
    LBRACK           shift, and go to state 6
    PLUS             shift, and go to state 8
    MINUS            shift, and go to state 9
    INC              shift, and go to state 10
    DEC              shift, and go to state 11
    NOT              shift, and go to state 12
    BIT_NOT          shift, and go to state 13
    DELETE           shift, and go to state 18
    FUNCTION         shift, and go to state 96
    NEW              shift, and go to state 23
    SUPER            shift, and go to state 25
    THIS             shift, and go to state 27
    TYPEOF           shift, and go to state 30
    VOID             shift, and go to state 32
    TRUE_LITERAL     shift, and go to state 35
    FALSE_LITERAL    shift, and go to state 36
    NULL_LITERAL     shift, and go to state 37

    literal_or_identifier      go to state 61
    function_expression        go to state 62
    unary_expression           go to state 105
    update_expression          go to state 78
    left_hand_side_expression  go to state 106
    new_expression             go to state 80
    call_expression            go to state 81
    member_expression          go to state 82
    primary_expression         go to state 83
    object_expression          go to state 84
    array_expression           go to state 85


state 9

  129 unary_expression: MINUS . unary_expression

    IDENTIFIER       shift, and go to state 103
    STRING_LITERAL   shift, and go to state 2
    NUMERIC_LITERAL  shift, and go to state 3
    LBRACE           shift, and go to state 95
    LPAREN           shift, and go to state 104
    LBRACK           shift, and go to state 6
    PLUS             shift, and go to state 8
    MINUS            shift, and go to state 9
    INC              shift, and go to state 10
    DEC              shift, and go to state 11
    NOT              shift, and go to state 12
    BIT_NOT          shift, and go to state 13
    DELETE           shift, and go to state 18
    FUNCTION         shift, and go to state 96
    NEW              shift, and go to state 23
    SUPER            shift, and go to state 25
    THIS             shift, and go to state 27
    TYPEOF           shift, and go to state 30
    VOID             shift, and go to state 32
    TRUE_LITERAL     shift, and go to state 35
    FALSE_LITERAL    shift, and go to state 36
    NULL_LITERAL     shift, and go to state 37

    literal_or_identifier      go to state 61
    function_expression        go to state 62
    unary_expression           go to state 107
    update_expression          go to state 78
    left_hand_side_expression  go to state 106
    new_expression             go to state 80
    call_expression            go to state 81
    member_expression          go to state 82
    primary_expression         go to state 83
    object_expression          go to state 84
    array_expression           go to state 85


state 10

  126 unary_expression: INC . unary_expression

    IDENTIFIER       shift, and go to state 103
    STRING_LITERAL   shift, and go to state 2
    NUMERIC_LITERAL  shift, and go to state 3
    LBRACE           shift, and go to state 95
    LPAREN           shift, and go to state 104
    LBRACK           shift, and go to state 6
    PLUS             shift, and go to state 8
    MINUS            shift, and go to state 9
    INC              shift, and go to state 10
    DEC              shift, and go to state 11
    NOT              shift, and go to state 12
    BIT_NOT          shift, and go to state 13
    DELETE           shift, and go to state 18
    FUNCTION         shift, and go to state 96
    NEW              shift, and go to state 23
    SUPER            shift, and go to state 25
    THIS             shift, and go to state 27
    TYPEOF           shift, and go to state 30
    VOID             shift, and go to state 32
    TRUE_LITERAL     shift, and go to state 35
    FALSE_LITERAL    shift, and go to state 36
    NULL_LITERAL     shift, and go to state 37

    literal_or_identifier      go to state 61
    function_expression        go to state 62
    unary_expression           go to state 108
    update_expression          go to state 78
    left_hand_side_expression  go to state 106
    new_expression             go to state 80
    call_expression            go to state 81
    member_expression          go to state 82
    primary_expression         go to state 83
    object_expression          go to state 84
    array_expression           go to state 85


state 11

  127 unary_expression: DEC . unary_expression

    IDENTIFIER       shift, and go to state 103
    STRING_LITERAL   shift, and go to state 2
    NUMERIC_LITERAL  shift, and go to state 3
    LBRACE           shift, and go to state 95
    LPAREN           shift, and go to state 104
    LBRACK           shift, and go to state 6
    PLUS             shift, and go to state 8
    MINUS            shift, and go to state 9
    INC              shift, and go to state 10
    DEC              shift, and go to state 11
    NOT              shift, and go to state 12
    BIT_NOT          shift, and go to state 13
    DELETE           shift, and go to state 18
    FUNCTION         shift, and go to state 96
    NEW              shift, and go to state 23
    SUPER            shift, and go to state 25
    THIS             shift, and go to state 27
    TYPEOF           shift, and go to state 30
    VOID             shift, and go to state 32
    TRUE_LITERAL     shift, and go to state 35
    FALSE_LITERAL    shift, and go to state 36
    NULL_LITERAL     shift, and go to state 37

    literal_or_identifier      go to state 61
    function_expression        go to state 62
    unary_expression           go to state 109
    update_expression          go to state 78
    left_hand_side_expression  go to state 106
    new_expression             go to state 80
    call_expression            go to state 81
    member_expression          go to state 82
    primary_expression         go to state 83
    object_expression          go to state 84
    array_expression           go to state 85


state 12

  131 unary_expression: NOT . unary_expression

    IDENTIFIER       shift, and go to state 103
    STRING_LITERAL   shift, and go to state 2
    NUMERIC_LITERAL  shift, and go to state 3
    LBRACE           shift, and go to state 95
    LPAREN           shift, and go to state 104
    LBRACK           shift, and go to state 6
    PLUS             shift, and go to state 8
    MINUS            shift, and go to state 9
    INC              shift, and go to state 10
    DEC              shift, and go to state 11
    NOT              shift, and go to state 12
    BIT_NOT          shift, and go to state 13
    DELETE           shift, and go to state 18
    FUNCTION         shift, and go to state 96
    NEW              shift, and go to state 23
    SUPER            shift, and go to state 25
    THIS             shift, and go to state 27
    TYPEOF           shift, and go to state 30
    VOID             shift, and go to state 32
    TRUE_LITERAL     shift, and go to state 35
    FALSE_LITERAL    shift, and go to state 36
    NULL_LITERAL     shift, and go to state 37

    literal_or_identifier      go to state 61
    function_expression        go to state 62
    unary_expression           go to state 110
    update_expression          go to state 78
    left_hand_side_expression  go to state 106
    new_expression             go to state 80
    call_expression            go to state 81
    member_expression          go to state 82
    primary_expression         go to state 83
    object_expression          go to state 84
    array_expression           go to state 85


state 13

  130 unary_expression: BIT_NOT . unary_expression

    IDENTIFIER       shift, and go to state 103
    STRING_LITERAL   shift, and go to state 2
    NUMERIC_LITERAL  shift, and go to state 3
    LBRACE           shift, and go to state 95
    LPAREN           shift, and go to state 104
    LBRACK           shift, and go to state 6
    PLUS             shift, and go to state 8
    MINUS            shift, and go to state 9
    INC              shift, and go to state 10
    DEC              shift, and go to state 11
    NOT              shift, and go to state 12
    BIT_NOT          shift, and go to state 13
    DELETE           shift, and go to state 18
    FUNCTION         shift, and go to state 96
    NEW              shift, and go to state 23
    SUPER            shift, and go to state 25
    THIS             shift, and go to state 27
    TYPEOF           shift, and go to state 30
    VOID             shift, and go to state 32
    TRUE_LITERAL     shift, and go to state 35
    FALSE_LITERAL    shift, and go to state 36
    NULL_LITERAL     shift, and go to state 37

    literal_or_identifier      go to state 61
    function_expression        go to state 62
    unary_expression           go to state 111
    update_expression          go to state 78
    left_hand_side_expression  go to state 106
    new_expression             go to state 80
    call_expression            go to state 81
    member_expression          go to state 82
    primary_expression         go to state 83
    object_expression          go to state 84
    array_expression           go to state 85


state 14

   49 break_statement: BREAK . StatementTerminator

    SEMICOLON              shift, and go to state 7
    TOK_VIRTUAL_SEMICOLON  shift, and go to state 38

    StatementTerminator  go to state 112


state 15

   73 class_declaration: CLASS . IDENTIFIER class_body
   74                  | CLASS . IDENTIFIER EXTENDS assignment_expression class_body
